# umi_gripper_test

./: .gitignore  .gitmodules  CLAUDE.md  README.md
docker/: Dockerfile  container.sh  docker-compose.yml  entrypoint.sh
umi_bringup/: package.xml  setup.cfg  setup.py
umi_bringup/launch/: umi_bringup.launch.py
umi_data_manager/: package.xml  setup.cfg  setup.py
umi_data_manager/launch/: umi_record.launch.py  umi_slam.launch.py
umi_data_manager/scripts/: batch_process_slam.sh  process_bag_with_slam.py  record_raw_data.sh  rotation_utils.py
umi_data_pipeline/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
umi_data_pipeline/config/: recording_config.yaml
umi_data_pipeline/launch/: data_collection.launch.py
umi_data_pipeline/scripts/: convert_to_lerobot.py  convert_to_umi_zarr.py  inference_example.py  merge_hdf5.py  merge_umi_hdf5.py  process_bag_with_slam.py  record_raw_data.sh
umi_data_pipeline/umi_data_pipeline/: __init__.py
umi_model_manager/: package.xml  setup.cfg  setup.py
umi_model_manager/config/: bridge_config.yaml
umi_model_manager/launch/: umi_deploy.launch.py
umi_model_manager/scripts/: test_delta.py  visualizer_standalone.py
umi_model_manager/umi_model_manager/: bridge_node.py  init_pose_node.py  pose_utils.py  visualizer.py
