<?xml version="1.0"?>
<package format="3">
  <name>umi_bringup</name>
  <version>0.1.0</version>
  <description>UMI gripper hardware bringup (gripper + camera)</description>
  <maintainer email="robotis@robotis.com">robotis-ai</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>dynamixel_hardware_interface_example_4</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
